# BilibiliHistoryFetcher

./: .dockerignore  .gitignore  CUDA_SETUP.md  LICENSE.md  README.md  analyze_bilibili_history.py  app.spec  app_full.spec  app_launcher.py  app_lite.spec  bilibili_history.py  build.py  clean_data.py  cookie.txt  docker-compose.yml  export_to_excel.py  heatmap_visualizer.py  import_database.py  import_sqlite.py  install_dependencies.py  main.py  pyproject.toml  requirements.txt  send_log_email.py  template.html
config/: categories.json  config.yaml  scheduler_config.yaml  sql_statements_mysql.py  sql_statements_sqlite.py
docker/: Dockerfile.cpu  Dockerfile.cuda
middleware/: api_key_middleware.py
routers/: analysis.py  api_security.py  audio_to_text.py  bilibili_history_delete.py  categories.py  clean_data.py  comment.py  daily_count.py  data_sync.py  deepseek.py  delete_history.py  download.py  email_config.py  export.py  favorite.py  fetch_bili_history.py  heatmap.py  history.py  image_downloader.py  import_data.py  import_data_mysql.py  import_data_sqlite.py  login.py  popular_videos.py  scheduler.py  send_log.py  title_analytics.py  title_pattern_discovery.py  video_summary.py  viewing_analytics.py
scripts/: analyze_bilibili_history.py  bilibili_history.py  check_data_integrity.py  clean_data.py  comment_fetcher.py  export_to_excel.py  heatmap_visualizer.py  image_downloader.py  import_database.py  import_sqlite.py  init_categories.py  popular_videos.py  scheduler.py  scheduler_db.py  scheduler_db_enhanced.py  scheduler_manager.py  send_log_email.py  sql_statements_mysql.py  utils.py  (+4 more)
(+8 files in other folders)
